--- a/style.css
+++ b/style.css
@@ -1,4 +1,84 @@
-h1{
-    color: blue;
+header {
+    display: flex;
+    justify-content: space-between ;
+    padding: 0px 50px;
+    color: #f89f5b;
+    font-family: 'Oswald', sans-serif;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+
+h3 {
+    padding: 10px 100px; 
+    color: #f89f5b;
+    font-family: 'Oswald', sans-serif;
+}
+
+.coverPhoto {
+ width: 400px;
+ height: 400px;
+ border-radius: 300px;
+ margin: 100px;
+}
+
+body{
     
+    max-width: 2200px;
+    margin: 0 auto;
+    background-image: linear-gradient(#3f1651, black);
+    min-height: 100%;
+}
+
+.mainContent{
+    margin: 0 auto;
+    border-radius: 15px;
+    max-width: 80%;
+    color: #f89f5b;
+    background-image: linear-gradient(#653780, black);
+}
+.cover {
+    display: flex;
+    justify-content: space-around; 
+    margin: 0 auto;
+    font-size: 6em;
+    color: #f89f5b;
+    font-family: 'Oswald', sans-serif;
+    flex-wrap: wrap;
+}
+.intro p {
+ font-size: 1rem ;
+}
+
+.intro {
+    width: 400px;
+    height: 400px;
+    align-items: center;
+}
+.project{
+    width:400px;
+    height: 400px;
+    border-radius: 10px;
+    background-image: linear-gradient(#9c3587, #653780);
+    margin: 20px;
+}
+.projects{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 500px;
+    flex-wrap: wrap;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+}
+#projectTitle{ 
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Oswald', sans-serif;
+}
+
+#aboutMe{
+    font-size: 2rem;
+    flex-wrap: wrap;
 }
