--- a/home/style.css
+++ b/home/style.css
@@ -1,15 +1,13 @@
 header {
     display: flex;
     justify-content: space-between ;
-    padding: 0px 50px;
+    padding-left: 100px;
     color: #f89f5b;
     font-family: 'Oswald', sans-serif;
 }
 
 .navbar {
     display: flex;
-    justify-content: space-between;
-    
 }
 
 h3 {
@@ -22,11 +20,10 @@ h3 {
  width: 400px;
  height: 400px;
  border-radius: 300px;
- margin: 100px;
+ margin-top: 130px;
 }
 
-body{
-    
+body{ 
     max-width: 2200px;
     margin: 0 auto;
     background-image: linear-gradient(#3f1651, black);
@@ -48,6 +45,7 @@ body{
     color: #f89f5b;
     font-family: 'Oswald', sans-serif;
     flex-wrap: wrap;
+    padding:  48px 24px;
 }
 .intro p {
  font-size: 1rem ;
@@ -79,7 +77,35 @@ body{
     font-family: 'Oswald', sans-serif;
 }
 
+.hello{
+    padding: px;
+}
 #aboutMe{
-    font-size: 2rem;
+    font-size: 1.5rem;
     flex-wrap: wrap;
+    
+    max-width: 800px;
+}
+
+a:visited{
+    color: #f89f5b;
+}
+
+a:link{
+    color: #f89f5b;
+    
+}
+
+.icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.icon {
+    height: 65px;
+    background-image: linear-gradient(#9c3587, hsla(1, 1%,1%, 0));
+    border-radius: 20px;
+    padding: 24px 16px;
+    
 }
